--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "class-validator": "^0.14.0",
+    "graphql": "^15.8.0",
+    "graphql-yoga": "^3.3.0",
+    "next": "^13.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.20.7",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@citybiker/db": "*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "config": "*",
-    "database": "*",
     "eslint": "^7.32.0",
     "tsconfig": "*",
     "typescript": "^4.5.3"
