--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database",
+  "name": "@citybiker/db",
   "version": "1.0.0",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -24,16 +24,20 @@
     "studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^3.10.0"
+    "@prisma/client": "4.8.0",
+    "@types/graphql-fields": "^1.3.4",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.20.1"
   },
   "devDependencies": {
     "config": "*",
     "eslint": "^8.12.0",
-    "prisma": "^3.10.0",
+    "prisma": "^4.8.0",
     "rimraf": "^3.0.2",
     "tsconfig": "*",
     "tsup": "^5.11.13",
     "tsx": "^3.7.1",
+    "typegraphql-prisma": "^0.23.2",
     "typescript": "^4.5.5"
   }
 }
