--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,9 +2,8 @@
   "name": "@citybiker/db",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./src/client.ts",
+  "module": "./src/client.ts",
   "files": [
     "dist/**"
   ],
