feat(frontend): specific station & stations view

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "extends": "tsconfig/nextjs.json",
-  "exclude": ["node_modules"],
   "include": [
     "next-env.d.ts",
-    "src"
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
