--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,18 +13,25 @@
   "dependencies": {
     "@citybiker/api": "*",
     "@citybiker/db": "*",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.10.0",
+    "@mantine/hooks": "^5.10.0",
+    "@mantine/next": "^5.10.0",
     "@tanstack/react-query": "^4.22.0",
-    "@trpc/client": "^10.8.1",
-    "@trpc/next": "^10.8.1",
-    "@trpc/react-query": "^10.8.1",
-    "@trpc/server": "^10.8.1",
-    "next": "^13.1.1",
+    "@trpc/client": "^10.9.0",
+    "@trpc/next": "^10.9.0",
+    "@trpc/react-query": "^10.9.0",
+    "@trpc/server": "^10.9.0",
+    "google-map-react": "^2.2.0",
+    "next": "^13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tsconfig": "*",
-    "zod": "^3.20.0"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
