feat(backend): new api routes

--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,7 @@
     "db:migrate:deploy": {},
     "db:push": {},
     "db:seed": {},
+    "clean": {},
     "dev": {
       "cache": false,
       "persistent": true
