--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev": "turbo run dev",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "generate": "turbo run generate",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "clean": "turbo run clean"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
