--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,15 +23,16 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
-    "google-map-react": "^2.2.0",
+    "@types/leaflet": "^1.9.0",
+    "leaflet": "^1.9.3",
     "next": "^13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.0",
     "tsconfig": "*",
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/google-map-react": "^2.1.7",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
