--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.0",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-loading-skeleton": "^3.1.0",
     "tsconfig": "*",
     "zod": "^3.20.2"
   },
