--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -20,15 +20,20 @@
     "lint": "TIMING=1 eslint \"src/**/*.ts\"",
     "prebuild": "npm run generate",
     "predev": "npm run generate",
-    "studio": "prisma studio"
+    "studio": "prisma studio",
+    "import": "tsx src/import.ts"
   },
   "dependencies": {
     "@prisma/client": "4.8.0",
     "@types/graphql-fields": "^1.3.4",
+    "csv-parser": "^3.0.0",
     "graphql-fields": "^2.0.3",
-    "graphql-scalars": "^1.20.1"
+    "graphql-scalars": "^1.20.1",
+    "luxon": "^3.2.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/luxon": "^3.2.0",
     "config": "*",
     "eslint": "^8.12.0",
     "prisma": "^4.8.0",
