--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,12 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
     "@citybiker/api": "*",
     "@citybiker/db": "*",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "^5.10.0",
-    "@mantine/hooks": "^5.10.0",
-    "@mantine/next": "^5.10.0",
+    "@emotion/styled": "^11.10.5",
     "@tanstack/react-query": "^4.22.0",
     "@tanstack/react-query-devtools": "^4.22.0",
     "@trpc/client": "^10.9.0",
@@ -25,6 +24,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "@types/leaflet": "^1.9.0",
+    "framer-motion": "^8.4.6",
     "leaflet": "^1.9.3",
     "next": "^13.1.2",
     "react": "18.2.0",
