--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "react-leaflet": "^4.2.0",
     "react-leaflet-cluster": "^2.1.0",
     "react-loading-skeleton": "^3.1.0",
+    "sharp": "^0.31.3",
     "tsconfig": "*",
     "zod": "^3.20.2"
   },
