feat(frontend & backend): initial testing setup

--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,9 @@
       "dependsOn": ["^generate"]
     },
     "lint": {},
-    "test": {}
+    "test": {},
+    "test:watch": {
+      "cache": false
+    }
   }
 }
