--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,9 @@
     "dev": "next dev",
     "lint": "SKIP_ENV_VALIDATION=1 next lint",
     "type-check": "tsc --noEmit",
-    "with-env": "dotenv -e ../../.env --"
+    "with-env": "dotenv -e ../../.env --",
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --verbose --watchAll"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.16",
@@ -38,6 +40,8 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.6",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
@@ -45,8 +49,10 @@
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.1",
+    "jest": "^29.3.1",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   }
 }
