--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "generate": "turbo run generate",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
