--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -22,9 +22,11 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "eslint-plugin-jest": "^27.2.1"
   },
   "devDependencies": {
+    "eslint": "^8.32.0",
     "typescript": "^4.5.3"
   }
 }
