--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -20,7 +20,9 @@
     "prebuild": "npm run generate",
     "predev": "npm run generate",
     "studio": "prisma studio",
-    "import": "tsx src/import.ts"
+    "import": "tsx src/import.ts",
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --verbose --watchAll"
   },
   "dependencies": {
     "@prisma/client": "4.8.0",
@@ -32,11 +34,14 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.6",
     "@types/luxon": "^3.2.0",
     "config": "*",
     "eslint": "^8.12.0",
+    "jest": "^29.3.1",
     "prisma": "^4.8.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.5",
     "tsconfig": "*",
     "tsup": "^5.11.13",
     "tsx": "^3.7.1",
