--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.0.0",
@@ -50,6 +51,7 @@
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.1",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
