--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@tanstack/react-query": "^4.22.0",
     "@tanstack/react-query-devtools": "^4.22.0",
     "@trpc/client": "^10.9.0",
@@ -32,6 +33,7 @@
     "next": "^13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-leaflet": "^4.2.0",
     "react-leaflet-cluster": "^2.1.0",
     "react-loading-skeleton": "^3.1.0",
