--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,10 +17,14 @@
     "@chakra-ui/react": "^2.4.9",
     "@citybiker/api": "*",
     "@citybiker/db": "*",
+    "@date-io/dayjs": "^2.16.0",
+    "@date-io/moment": "^2.16.1",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
+    "@mui/material": "^5.11.6",
+    "@mui/x-date-pickers": "^5.0.15",
     "@tanstack/react-query": "^4.22.0",
     "@tanstack/react-query-devtools": "^4.22.0",
     "@trpc/client": "^10.9.0",
@@ -28,6 +32,7 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "@types/leaflet": "^1.9.0",
+    "dayjs": "^1.11.7",
     "framer-motion": "^8.4.6",
     "leaflet": "^1.9.3",
     "next": "^13.1.3",
