--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "jest --verbose"
   },
   "dependencies": {
     "@trpc/client": "^10.8.1",
@@ -17,6 +18,9 @@
   },
   "devDependencies": {
     "eslint": "^8.30.0",
+    "jest": "^29.3.1",
+    "jest-extended": "^3.2.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
   }
 }
