--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,10 @@
     "type-check": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --",
     "test": "jest --verbose --coverage",
-    "test:watch": "jest --verbose --watchAll"
+    "test:watch": "jest --verbose --watchAll",
+    "cypress:open": "cypress open",
+    "cypress:test": "cypress run",
+    "e2e": "start-server-and-test dev http://localhost:3000 cypress:open"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.16",
@@ -54,12 +57,14 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.4.1",
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.1",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.19",
+    "start-server-and-test": "^1.15.3",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4"
