--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -61,6 +61,7 @@
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^13.1.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.19",
