--- a/.gitignore
+++ b/.gitignore
@@ -23,13 +23,13 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 !packages/database/.env
 
-.env
 
 # turbo
 .turbo
@@ -38,3 +38,4 @@ yarn-error.log*
 /packages/database/data/
 /apps/web/generated/type-graphql/
 /packages/database/dist/
+/apps/web/cypress/screenshots/
