--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "lint": "turbo run lint",
     "clean": "turbo run clean",
     "test": "turbo run test",
-    "test:watch": "turbo run test:watch"
+    "test:watch": "turbo run test:watch",
+    "test:e2e": "turbo run e2e:headless",
+    "start": "yarn run build && cd apps/web && yarn run start",
+    "importDB": "cd packages/database && yarn run import"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
