--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -26,10 +26,8 @@
   },
   "dependencies": {
     "@prisma/client": "4.8.0",
-    "@types/graphql-fields": "^1.3.4",
     "csv-parser": "^3.0.0",
-    "graphql-fields": "^2.0.3",
-    "graphql-scalars": "^1.20.1",
+    "dotenv": "^16.0.3",
     "luxon": "^3.2.1",
     "zod": "^3.20.2"
   },
@@ -45,7 +43,6 @@
     "tsconfig": "*",
     "tsup": "^5.11.13",
     "tsx": "^3.7.1",
-    "typegraphql-prisma": "^0.23.2",
     "typescript": "^4.5.5"
   }
 }
