--- a/turbo.json
+++ b/turbo.json
@@ -21,6 +21,9 @@
     "test": {},
     "test:watch": {
       "cache": false
-    }
+    },
+    "e2e:headless": {},
+    "start": {},
+    "import": {}
   }
 }
